fix: change gap on the main page

--- a/src/app/components/MainInfo/MainInfo.module.scss
+++ b/src/app/components/MainInfo/MainInfo.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
   transition: .8s;
   opacity: 1;
   visibility: visible;
@@ -12,6 +12,10 @@
     visibility: hidden;
     transform: translateY(-100%)
   }
+}
+
+.img {
+  margin-bottom: 10px
 }
 
 .text {
