--- a/src/app/components/Slider/Slider.module.scss
+++ b/src/app/components/Slider/Slider.module.scss
@@ -4,5 +4,5 @@
   max-width: 1000px;
   gap: 70px;
   justify-content: center;
-  padding: 20px;
+  padding: 0 20px;
 }
